Updating version number to 4.0 Final (templates/admin/ui.html) Added a CSS property to fix a layout bug in XOOPS 2.5 (templates/admin/css/ui.css) Added a custom stylesheet to fix a layout bug in ImpressCMS 1.3 (index.php, templates/css/style.css) Added an extra check to one part of the processing of checkbox values and selectbox values on saving, so that we don't end up in an endless loop when there's bad data from the user (include/functions.php) Fixed a bug in the ajax saving of data from inline elements in a list of entries, when the elements were multiselect elements (checkboxes, listboxes) (include/entriesdisplay.php) Removed "is_subclass_of($criteria, 'criteriaelement')" since it is not supported in ImpressCMS 1.3 (class/elements.php) Removed a =& for PHP 5.3 compatibility.  Other changes may be necessary/recommended besides this. (admin/ui.php) Fixing a bug in the reducing of the size of listboxes to match the number of options, when the number is lower than the specified size (does not work on ImpressCMS 1.3 with linked selectboxes) (class/elementrenderer.php)
git-svn-id: svn+ssh://svn.code.sf.net/p/formulize/code@545 e5624274-254a-0410-876d-c0e85fc73166

--- a/Formulize/trunk/templates/admin/css/ui.css
+++ b/Formulize/trunk/templates/admin/css/ui.css
@@ -22,6 +22,7 @@ label {
 }
 
 .form-screen-list .imageicon {
+	clear: both;
 	float: left;
 }
 
